# Multigame

./: CMakeLists.txt  rsc.qrc
Demolition/: demolition.cpp  demolition.h  demolition.ui
FlappyBird/: background.cpp  background.h  flappybird.cpp  flappybird.h  flappybird.ui  obstacle.cpp  obstacle.h  player.cpp  player.h  score.cpp  score.h
Pong/: pong.cpp  pong.h  pong.ui
src/: game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
